# anarise-vpn

./: .gitignore  README.md  RELEASE_NOTES_PENDING.md  build.gradle.kts  test_parse.kts
android/: README.md  download_hysteria2.sh  settings.gradle.kts
android/app/: build.gradle.kts  shared-debug.keystore
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_vpn_tile.xml
android/temp_vyom_tunnel/vyom-tun-sdk/: build.gradle.kts
android/temp_vyom_tunnel/vyom-tun-sdk/src/main/cpp/: CMakeLists.txt  vyom-bridge.cpp
app/: build.gradle.kts
app/src/main/res/drawable/: ic_paste.xml  ic_qr_code.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
temp_vyom_tunnel/: .gitignore  CHANGELOG.md  LICENSE.md  README.md  settings.gradle.kts
temp_vyom_tunnel/app/: build.gradle.kts
temp_vyom_tunnel/app/src/main/: AndroidManifest.xml
temp_vyom_tunnel/app/src/main/res/layout/: activity_app_selector.xml  activity_main.xml  item_app.xml
temp_vyom_tunnel/app/src/main/res/values-night/: themes.xml
temp_vyom_tunnel/gradle/: libs.versions.toml
temp_vyom_tunnel/gradle/wrapper/: gradle-wrapper.properties
temp_vyom_tunnel/vyom-tun-sdk/: build.gradle.kts  consumer-rules.pro
temp_vyom_tunnel/vyom-tun-sdk/src/main/: AndroidManifest.xml
windows/: .gitignore  Anarise.csproj  App.xaml  App.xaml.cs  LinkParser.cs  MainWindow.xaml  MainWindow.xaml.cs  SystemProxyManager.cs  app.manifest  generate_icon.py
windows/wwwroot/: app.js  index.html  style.css
(+53 files in other folders)
